tests/v0-fail/reject.out
Running tests/v0-fail/reject.cli ...

printf "hello\n"
---
hello
---
ERROR: pattern reject at line tests/v0-fail/reject.cli:5 does not match output line "<eof>"
matching Any(End)
  matching End
  -matching Literal(hello)
  -literal match: "hello" == "hello"
-matching Literal(hello)
-literal match: "hello" == "hello"

❌ FAIL

tests/v0-fail/reject.cli FAILED
Error: pattern reject at line tests/v0-fail/reject.cli:5 does not match output line "<eof>"

1/1 test(s) failed
